--- a/test.html
+++ b/test.html
@@ -8,30 +8,30 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 <style>
 :root {
-  --blue: #004aad;
+  --royal-blue: #002366;
   --yellow: #f9d71c;
-  --bg-dark: #121212;
-  --text-light: #fff;
+  --white: #ffffff;
+  --text-dark: #000;
 }
 
+/* Reset */
 * { margin:0; padding:0; box-sizing:border-box; font-family:'Montserrat', sans-serif; }
-body { background: var(--bg-dark); color: var(--text-light); overflow-x:hidden; }
+body { background: var(--royal-blue); color: var(--white); overflow-x:hidden; }
 
+/* Header */
 header {
   display:flex;
   justify-content: space-between;
   align-items:center;
   padding: 20px 50px;
-  background: #000;
+  background: var(--royal-blue);
   position: sticky;
   top:0;
   z-index:1000;
 }
-
 header img { height:50px; }
-
 nav a {
-  color: var(--text-light);
+  color: var(--white);
   text-decoration:none;
   margin-left:30px;
   font-weight:700;
@@ -41,123 +41,198 @@ nav a:hover { color: var(--yellow); }
 
 /* Hero */
 .hero {
-  height:100vh;
+  min-height:90vh;
   display:flex;
   flex-direction: column;
   justify-content:center;
   align-items:center;
   text-align:center;
-  background: linear-gradient(135deg, var(--blue), var(--yellow));
-  background-size: 400% 400%;
-  animation: gradientMove 15s ease infinite;
+  background: var(--royal-blue);
+  position:relative;
 }
-
-@keyframes gradientMove {
-  0%{background-position:0% 50%;}
-  50%{background-position:100% 50%;}
-  100%{background-position:0% 50%;}
-}
-
 .hero h1 {
   font-size:3rem;
-  color:#fff;
+  color: var(--yellow);
+  margin-bottom:15px;
   animation: fadeIn 2s ease forwards;
   opacity:0;
 }
-
-@keyframes fadeIn {
-  to { opacity:1; }
-}
-
 .hero p {
-  margin-top:20px;
   font-size:1.5rem;
-  color:#fff;
+  color: var(--white);
   animation: fadeIn 3s ease forwards;
   opacity:0;
 }
+@keyframes fadeIn { to { opacity:1; } }
 
-/* Section styling */
+/* Content Section Styling */
 section {
-  padding:100px 50px;
+  padding:80px 50px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-direction: column;
+  gap:30px;
+}
+.section-content {
+  background: var(--white);
+  color: var(--text-dark);
+  padding:40px;
+  border-radius:12px;
+  max-width:900px;
   text-align:center;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
 }
 
+/* Titles */
 section h2 {
   font-size:2.5rem;
-  color: var(--yellow);
+  color: var(--royal-blue);
   margin-bottom:20px;
 }
 
-section p {
-  font-size:1.2rem;
-  max-width:800px;
-  margin:0 auto;
-  color:#eee;
-}
-
 /* Upcoming Shows */
-.upcoming {
-  background: linear-gradient(135deg, var(--yellow), var(--blue));
-  color:#000;
+.upcoming .section-content {
+  border-left: 8px solid var(--yellow);
 }
 
-.upcoming span {
-  font-weight:700;
-  font-size:1.5rem;
-}
-
-/* CTA Sections */
-.cta {
+/* Gallery */
+.gallery-preview {
   display:flex;
-  justify-content:center;
   flex-wrap:wrap;
-  gap:50px;
-  margin-top:50px;
+  justify-content:center;
+  gap:20px;
 }
-
-.cta .box {
-  background: var(--blue);
-  color:#fff;
-  padding:40px 30px;
+.gallery-preview img {
+  width:250px;
+  height:150px;
+  object-fit:cover;
   border-radius:12px;
-  flex:1 1 300px;
-  max-width:400px;
-  transition: all 0.3s;
+  transition: transform 0.3s, opacity 1s;
+  cursor:pointer;
+  opacity:0;
+  transform: translateY(30px);
+}
+.gallery-preview img.visible {
+  opacity:1;
+  transform: translateY(0);
 }
 
-.cta .box:hover {
-  transform: translateY(-10px);
+/* Awards */
+.awards {
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:30px;
+}
+.award-card {
   background: var(--yellow);
-  color:#000;
+  padding:30px 20px;
+  border-radius:12px;
+  width:250px;
+  transition: all 0.3s, transform 1s, opacity 1s;
+  color: var(--royal-blue);
+  opacity:0;
+  transform: scale(0.8);
+}
+.award-card.visible {
+  opacity:1;
+  transform: scale(1);
+}
+.award-card:hover { background: #fff; color: var(--royal-blue); }
+
+/* Video Section Wrapper */
+.video-section-wrapper {
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  margin:80px 0;
+  gap:20px;
 }
 
-.cta .box h3 {
-  font-size:1.8rem;
-  margin-bottom:15px;
+/* Section title in white card */
+.video-section-wrapper .section-content {
+  background: var(--white);
+  color: var(--text-dark);
+  padding:30px 40px;
+  border-radius:12px;
+  max-width:900px;
+  text-align:center;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
 }
 
-.cta .box p {
-  font-size:1rem;
+/* Video Container spans almost full width */
+.video-container {
+  width:95%;
+  max-width:1200px;
+  border-radius:12px;
+  overflow:hidden;
+  opacity:0;
+  transform: translateY(30px);
+  transition: opacity 1s, transform 1s;
 }
+
+/* Iframe full width and height */
+.video-container iframe {
+  width:100%;
+  height:500px;
+  border:none;
+}
+
+/* Visible animation */
+.video-container.visible {
+  opacity:1;
+  transform: translateY(0);
+}
+
+/* Get in touch section */
+.contact-section {
+  background: var(--royal-blue);
+  padding:80px 50px;
+  border-radius:12px;
+  margin:50px;
+  text-align:center;
+  opacity:0;
+  transform: translateY(30px);
+  transition: opacity 1s, transform 1s;
+}
+.contact-section.visible {
+  opacity:1;
+  transform: translateY(0);
+}
+.contact-section h3 { font-size:2rem; color: var(--yellow); margin-bottom:20px; }
+.contact-section p { font-size:1.2rem; color: var(--white); }
 
 /* Footer */
 footer {
-  background:#000;
+  background: var(--royal-blue);
   padding:30px 50px;
   display:flex;
   justify-content: space-between;
   align-items:center;
-  color:#fff;
+  color: var(--white);
+  flex-wrap:wrap;
 }
-
-footer img { height:40px; }
+footer img { height:40px; margin-right:10px; }
+footer a { color: var(--yellow); text-decoration:none; font-weight:700; }
 footer p { font-size:0.9rem; }
+
+/* Socials in footer */
+.socials {
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
+.socials img { width:30px; height:30px; object-fit:contain; border-radius:6px; }
 
 @media (max-width:768px){
   .hero h1 { font-size:2.2rem; }
   .hero p { font-size:1.2rem; }
-  .cta { flex-direction:column; }
+  .gallery-preview img { width:80%; height:auto; }
+  .video-container iframe { height:300px; }
+  .video-section-wrapper .section-content { padding:20px 20px; }
+  .contact-section { margin:30px 10px; }
+  footer { flex-direction:column; gap:10px; }
 }
 </style>
 </head>
@@ -180,32 +255,112 @@ footer p { font-size:0.9rem; }
 
 <!-- About Section -->
 <section>
-  <h2>What is SMS Theater?</h2>
-  <p>SMS Theater provides students with the opportunity to learn, perform, and grow in a collaborative theatrical environment. From rehearsals to public performances, our mission is to inspire creativity and confidence in every participant.</p>
+  <div class="section-content">
+    <h2>What is SMS Theater?</h2>
+    <p>SMS Theater provides students with the opportunity to learn, perform, and grow in a collaborative theatrical environment. From rehearsals to public performances, our mission is to inspire creativity and confidence in every participant.</p>
+  </div>
 </section>
 
 <!-- Upcoming Shows -->
 <section class="upcoming">
-  <h2>Upcoming Shows</h2>
-  <p>Next Show: <span>December 12th, 2025 — SMS One Act Play Public Performance</span></p>
-</section>
-
-<!-- Call-to-Actions -->
-<section class="cta">
-  <div class="box">
-    <h3>Come act with us!</h3>
-    <p>Come get in the spotlight and act with SMS Theater!</p>
-  </div>
-  <div class="box" id="contact">
-    <h3>Get in touch</h3>
-    <p>Email our teachers at: <strong>youremail@example.com</strong></p>
+  <div class="section-content">
+    <h2>Upcoming Shows</h2>
+    <p>Next Show: <strong>December 12th, 2025 — SMS One Act Play Public Performance</strong></p>
   </div>
 </section>
 
+<!-- Featured Photos / Mini Gallery -->
+<section>
+  <div class="section-content">
+    <h2>Featured Photos</h2>
+    <div class="gallery-preview">
+      <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Rehearsal 1">
+      <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Rehearsal 2">
+      <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Rehearsal 3">
+    </div>
+    <p style="margin-top:20px;"><a href="gallery.html">See more in Gallery</a></p>
+  </div>
+</section>
+
+<!-- Awards / Achievements -->
+<section>
+  <div class="section-content">
+    <h2>Awards & Achievements</h2>
+    <div class="awards">
+      <div class="award-card">
+        <h4>Best School Play 2024</h4>
+        <p>Recognized for outstanding student performance.</p>
+      </div>
+      <div class="award-card">
+        <h4>Community Theater Award</h4>
+        <p>Excellence in school theater production.</p>
+      </div>
+      <div class="award-card">
+        <h4>Top Creativity Award</h4>
+        <p>Celebrating innovative performances and stagecraft.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- See Us in Action (Full-Width Video) -->
+<section class="video-section-wrapper">
+  <div class="section-content">
+    <h2>See Us in Action</h2>
+  </div>
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="SMS Theater Video"></iframe>
+  </div>
+</section>
+
+<!-- Get in touch section -->
+<section class="contact-section" id="contact">
+  <h3>Get in touch</h3>
+  <p>Email our teachers at: <strong>youremail@example.com</strong></p>
+</section>
+
+<!-- Footer -->
 <footer>
-  <img src="sms-logo.png.png" alt="SMS Logo">
-  <p>&copy; 2025 SMS Theater. All rights reserved.</p>
+  <p>Made by Kellan Rekieta</p>
+  <div class="socials">
+    <a href="https://www.instagram.com/sunnytheatre/" target="_blank">
+      <img src="https://sms-theatre.netlify.app/IMG_0106.png" alt="Instagram">
+    </a>
+    <span>@sunnytheatre</span>
+  </div>
 </footer>
+
+<script>
+// Scroll animations
+const observerOptions = { threshold: 0.2 };
+const galleryImages = document.querySelectorAll('.gallery-preview img');
+const awards = document.querySelectorAll('.award-card');
+const videoContainer = document.querySelector('.video-container');
+const contactSection = document.querySelector('.contact-section');
+
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if(entry.isIntersecting){
+      if(entry.target.classList.contains('award-card') || entry.target.tagName === 'IMG'){
+        entry.target.classList.add('visible');
+      }
+      if(entry.target === videoContainer
+){
+        videoContainer.classList.add('visible');
+      }
+      if(entry.target === contactSection){
+        contactSection.classList.add('visible');
+      }
+    }
+  });
+}, observerOptions);
+
+// Observe all animated elements
+galleryImages.forEach(img => observer.observe(img));
+awards.forEach(card => observer.observe(card));
+observer.observe(videoContainer);
+observer.observe(contactSection);
+</script>
 
 </body>
 </html>
