--- a/gallery.html
+++ b/gallery.html
@@ -149,7 +149,7 @@ footer {
 <!-- Class Pictures -->
 <div id="classes" class="tab-content">
   <div class="gallery">
-    <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Class 1">
+    <img src="https://sms-theatre.netlify.app/IMG_0107.png" alt="Class 1">
     <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Class 2">
     <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Class 3">
   </div>
