--- a/test.html
+++ b/test.html
@@ -274,7 +274,7 @@ footer p { font-size:0.9rem; }
   <div class="section-content">
     <h2>Featured Photos</h2>
     <div class="gallery-preview">
-      <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Rehearsal 1">
+      <img src="https://sms-theatre.netlify.app/IMG_0107.png" alt="Rehearsal 1">
       <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Rehearsal 2">
       <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Rehearsal 3">
     </div>
