--- a/gallery.html
+++ b/gallery.html
@@ -75,20 +75,6 @@ h2 { font-size:2rem; color:white; text-shadow: 0 0 8px rgba(0,0,0,0.5); margin-b
   box-shadow:0 10px 25px rgba(0,0,0,0.5);
 }
 
-/* FEATURED CARD */
-.featured-card {
-  background: var(--yellow);
-  color: var(--blue);
-  padding:15px;
-  border-radius:12px;
-  text-align:center;
-  font-weight:700;
-  margin-bottom:20px;
-  box-shadow:0 6px 15px rgba(0,0,0,0.3);
-  transition: transform 0.3s;
-}
-.featured-card:hover { transform: scale(1.03); }
-
 /* FOOTER */
 footer {
   margin-top:40px;
@@ -115,11 +101,10 @@ footer {
   <h1>SMS Theater Gallery</h1>
 </header>
 
-<h2>Rehearsals, Plays, and Class Pictures</h2>
+<h2>Rehearsals and Class Pictures</h2>
 
 <div class="tabs">
   <div class="tab-btn active" data-tab="rehearsals">Rehearsals</div>
-  <div class="tab-btn" data-tab="plays">Plays</div>
   <div class="tab-btn" data-tab="classes">Class Pictures</div>
 </div>
 
@@ -129,20 +114,6 @@ footer {
     <img src="https://sms-theatre.netlify.app/IMG_0108.jpeg" alt="Rehearsal 1">
     <img src="https://sms-theatre.netlify.app/IMG_0110.jpeg" alt="Rehearsal 2">
     <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Rehearsal 3">
-  </div>
-</div>
-
-<!-- Plays -->
-<div id="plays" class="tab-content">
-  <!-- Featured One Act Play -->
-  <div class="featured-card">
-    🎭 SMS One Act Play — Public Performance<br>
-    <strong>Date:</strong> December 12, 2025
-  </div>
-  <div class="gallery">
-    <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Play 1">
-    <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Play 2">
-    <img src="https://sms-theatre.netlify.app/IMG_0101.jpeg" alt="Play 3">
   </div>
 </div>
 
